--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Build and push image to ACR
       id: build-image
       run: |
-        docker build "$GITHUB_WORKSPACE/Micros.API" -f  "Micros.API/Dockerfile" -t crdemo8dev.azurecr.io/kcdemo8:${{ github.sha }} --label dockerfile-path=Micros.API/Dockerfile
+        docker build "$GITHUB_WORKSPACE" -f  "Dockerfile" -t crdemo8dev.azurecr.io/kcdemo8:${{ github.sha }} --label dockerfile-path=Dockerfile
         docker push crdemo8dev.azurecr.io/kcdemo8:${{ github.sha }}
     
     - uses: azure/k8s-set-context@v1
